--- a/guzman.html
+++ b/guzman.html
@@ -1,1 +1,26 @@
-<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="eric-guzman-585352138"><a class="LI-simple-link" href='https://nl.linkedin.com/in/eric-guzman-585352138?trk=profile-badge'>Eric Guzman</a></div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>TEST</title>
+    <link href="index.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <script src="index.js"></script>
+    <p style="color: red; font-size: 200%"> OLD SCHOOL</p>
+    <h1>header one tag  </h1>
+    <address> address tag</address>
+    <h2>H2 tag</h2>
+    <aside> aside tag </aside>
+    <p>-------------------------<br>-------------------------</p>
+    <script type="text/javascript">
+      document.write("<p> test <b>1...2...3</b></p>")
+      document.write(Date(123))
+    </script>
+    <p>-------------------------<br>-------------------------</p>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="eric-guzman-585352138"><a class="LI-simple-link" href='https://nl.linkedin.com/in/eric-guzman-585352138?trk=profile-badge'>Eric Guzman</a></div>
+    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="eric-guzman-585352138"><a class="LI-simple-link" href='https://nl.linkedin.com/in/eric-guzman-585352138?trk=profile-badge'>Eric Guzman</a></div>    
+  </body>
+</html>
